--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -6,7 +6,9 @@
     <h2 class="date">Monday October 23rd, 2017</h2>
     <h4 class="sleep">Slept: 5 hours</h4><br><br>
     <h3 class="subtitle">Doing <a></a></h3>
-<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"></blockquote>
+    <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+      <p lang="en" dir="ltr">Absolutely! I&#39;d recommend checking out all of <a href="https://twitter.com/vlh?ref_src=twsrc%5Etfw">@vlh</a>&#39;s fantastic resources about UI animation, and her talk on exactly this subject: <a href="https://t.co/OGOGOUpR7d">https://t.co/OGOGOUpR7d</a></p>&mdash; Brad Frost (@brad_frost) <a href="https://twitter.com/brad_frost/status/929084622444683265?ref_src=twsrc%5Etfw">November 10, 2017</a>
+    </blockquote>
     <br>
     <h3>To do:</h3>
     <ol class="todo">
@@ -19,8 +21,28 @@
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
     <hr />
-
   -->
+
+
+<h2 class="date">Saturday November 11th, 2017</h2>
+<h4 class="sleep">Slept: 8 hours</h4><br><br>
+<h3 class="subtitle">Back into React</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+  <p lang="en" dir="ltr">Absolutely! I&#39;d recommend checking out all of <a href="https://twitter.com/vlh?ref_src=twsrc%5Etfw">@vlh</a>&#39;s fantastic resources about UI animation, and her talk on exactly this subject: <a href="https://t.co/OGOGOUpR7d">https://t.co/OGOGOUpR7d</a></p>&mdash; Brad Frost (@brad_frost) <a href="https://twitter.com/brad_frost/status/929084622444683265?ref_src=twsrc%5Etfw">November 10, 2017</a>
+</blockquote>
+<br>
+<h3>To do:</h3>
+<ol class="todo">
+  <li>ECMA View: Add entry for !! operator coercing <em>true</em> & <em>false</em> keywords from truthy & falsey values</li>
+  <li></li>
+  <li><span class="ltred">Potential Blocks:</span></li>
+</ol><br>
+<h3>Done: </h3>
+<ol class="done">
+  <li>PLACEHOLDERDONETASKS</li>
+</ol>
+<hr />
+
   <h2 class="date">Monday November 9th, 2017</h2>
   <h4 class="sleep">Slept: 4 hours</h4><br><br>
   <h3 class="subtitle">Learning a great deal about typography, style guides, design concepts storyboards.... lots and lots of training going on. <a href="http://www.kerriaugenstein.com/" target="_blank">This woman's training is phenomenal</a> Material design is, I'm descovering, not complete shite after all.<br />
