--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -10,7 +10,7 @@
 -->
 <div class="framed1 dkbg">
   <h3 class="chtitle wh">A common use of <strong class="paleY clean">!!</strong> to force a "true" or "false" from a truthy/falsey value</h3>
-  <p>In some environments empty strings are simply ignored and do not return the keyword "true" or "false"
+  <p>In some environments you will want undefined or empty strings to return the keyword "true" or "false"
 <br />In order to force this, it is common to use '!!'</p>
 
 <pre class="prettyprint ctr w40">
