--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -7,7 +7,8 @@
       <!--entire page pre-->
 
 <!--
--->
+hsl(0, 71%, 60%)
+hsl(0, 65%, 30%)-->
 <div class="framed1 dkbg">
   <h3 class="chtitle wh">A common use of <strong class="paleY clean">!!</strong> to force a "true" or "false" from a truthy/falsey value</h3>
   <p>In some environments you will want undefined or empty strings to return the keyword "true" or "false"
