--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -34,12 +34,12 @@
 <h3>To do:</h3>
 <ol class="todo">
   <li>ECMA View: Add entry for !! operator coercing <em>true</em> & <em>false</em> keywords from truthy & falsey values</li>
-  <li></li>
+  <li>JS Curriculum Building today and tomorrow</li>
   <li><span class="ltred">Potential Blocks:</span></li>
 </ol><br>
 <h3>Done: </h3>
 <ol class="done">
-  <li>PLACEHOLDERDONETASKS</li>
+  <li>Entries for !! and for es6 class extension</li>
 </ol>
 <hr />
 
