--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -26,16 +26,14 @@
   <h2 class="date">Monday November 12th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">Excellent day today. Solved a great deal regarding the js curriculum. woof.js, as it turns out, has great rudimentary projects for kids and is undeniably a good entry-way for kids. It, however, does not have the curriculum materials available --as Google's cs-first curriculum does. (Those materials leave a great deal to be desired. The content is spotty.) <br />
-  I'm concerned that in the months and years(?) to come tht this JS curriculum be delivered to an audience of adequate maturity and experience in coding. --Otherwise it will be a bore. At any rate. I've got a proof of concept design and plan to build it in React using styled componets FTW.</h3>
-  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
-    <p lang="en" dir="ltr">Absolutely! I&#39;d recommend checking out all of <a href="https://twitter.com/vlh?ref_src=twsrc%5Etfw">@vlh</a>&#39;s fantastic resources about UI animation, and her talk on exactly this subject: <a href="https://t.co/OGOGOUpR7d">https://t.co/OGOGOUpR7d</a></p>&mdash; Brad Frost (@brad_frost) <a href="https://twitter.com/brad_frost/status/929084622444683265?ref_src=twsrc%5Etfw">November 10, 2017</a>
-  </blockquote>
+  I'm concerned that in the months and years(?) to come tht this JS curriculum be delivered to an audience of adequate maturity and experience in coding. --Otherwise it will be a bore. At any rate. I've got a proof of concept design and plan to build it in React using styled components #FTW.</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Yeah. Though React 16 no longer require a wrapper div, so that might be able to help out in some instances <a href="https://t.co/nW5BN8szgM">https://t.co/nW5BN8szgM</a></p>&mdash; keith•justify-content•grant (@keithjgrant) <a href="https://twitter.com/keithjgrant/status/924261081740083200?ref_src=twsrc%5Etfw">October 28, 2017</a></blockquote>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
-    <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li>Components for mini-project for PlSite Training </li>
+    <li>Finish Lesson 3 for JS curriculum for work Sumbit through Trello</li>
+    <li><span class="ltred">Potential Blocks:</span> It's late and gonna be tight to get this all done.</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
