--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -22,7 +22,24 @@
     </ol>
     <hr />
   -->
-<h2 class="date">Monday November 24th, 2017</h2>
+  <h2 class="date">Monday, November 27th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4>
+  <br><br>
+  <h3 class="subtitle">Ajax and lots of DOM manipulation. <a href="https://www.udemy.com/js-and-react-for-devs/learn/v4/content">Cassidy Williams Excellent JS/React course rocks</a>.  </h3>
+  <br>
+  <h3>To do:</h3>
+  <ol>
+    <li>Entry regarding "get elem from raw js according to attr and val</li>
+    <li>querySelectorAll() vs. querySelector() entry.</li>
+    <li></li>
+    <h3>Done: </h3>
+    <br>
+    <ol class="done">
+      <li></li>
+    </ol>
+  </ol>
+  <hr>
+<h2 class="date">Friday November 24th, 2017</h2>
 <h4 class="sleep">Slept: 8 hours</h4><br><br>
 <h3 class="subtitle">React, vscode, js functions revisitation. --Recovering from a crash and was lead to erase 200Gigs by cust support while installing high Sierra update. Apple acknowledges error and is sending me some hardware: an Airport Time Capsule 2T. --It's a small consolation. It has taken nearly a week to get back up to speed. A good opportunity, though, to take stock of dev/training process. I'm going through training in vscode and am finally hooked. Going through wesbosjs30 again & am adding snippets and lessons learnt to some states here. Have set-up ssh keys for bitbucket and github.
   <h3>To do:</h3>
