--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,12 +3,11 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Monday October 23rd, 2017</h2>
+    <h2 class="date">Tuesday November 28th, 2017</h2>
     <h4 class="sleep">Slept: 5 hours</h4><br><br>
     <h3 class="subtitle">Doing <a></a></h3>
     <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
-      <p lang="en" dir="ltr">Absolutely! I&#39;d recommend checking out all of <a href="https://twitter.com/vlh?ref_src=twsrc%5Etfw">@vlh</a>&#39;s fantastic resources about UI animation, and her talk on exactly this subject: <a href="https://t.co/OGOGOUpR7d">https://t.co/OGOGOUpR7d</a></p>&mdash; Brad Frost (@brad_frost) <a href="https://twitter.com/brad_frost/status/929084622444683265?ref_src=twsrc%5Etfw">November 10, 2017</a>
-    </blockquote>
+      <p lang="en" dir="ltr">I just published “This in JavaScript” <a href="https://t.co/Tmmk6CQBRV">https://t.co/Tmmk6CQBRV</a></p>&mdash; Zell Liew 🤗 (@zellwk) <a href="https://twitter.com/zellwk/status/928456567753723907?ref_src=twsrc%5Etfw">November 9, 2017</a></blockquote>
     <br>
     <h3>To do:</h3>
     <ol class="todo">
@@ -22,6 +21,24 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Tuesday November 28th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Revisiting higher order functions and replacing more examples of .reduce() in order to make it clearer for visitors and for myself. reduce() is the most urgent one...then back to closures. Would like to do one on thunks Perhaps I'll have time this week.</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+    <p lang="en" dir="ltr">I just published “This in JavaScript” <a href="https://t.co/Tmmk6CQBRV">https://t.co/Tmmk6CQBRV</a></p>&mdash; Zell Liew 🤗 (@zellwk) <a href="https://twitter.com/zellwk/status/928456567753723907?ref_src=twsrc%5Etfw">November 9, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Rework reduce examples in ecma view.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Monday, November 27th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4>
   <br><br>
@@ -35,7 +52,8 @@
     <h3>Done: </h3>
     <br>
     <ol class="done">
-      <li></li>
+      <li>DOM manipulating entry done.</li>
+      
     </ol>
   </ol>
   <hr>
