--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -9,6 +9,7 @@
       <!--entire page pre-->
 <div class="simple-wine-frame ltbg ctr">
   <h1 class="chtitle dkblue">dispatchEvent()</h1>
+  <p>There are a great many uses to dispatchEvent. It is the last Fn Call after creating a custom event. <a href="https://www.udemy.com/js-and-react-for-devs/learn/v4/content">Cassidy Williams Excellent JS/React course has a quick intro to it in her 5th video in this series, but MDN is much more verbose & exhaustive</a></p>
   <a class="fRight" href="https://developer.mozilla.org/en-US/docs/Web/Guide/Events/Creating_and_triggering_events">c/o MDN</a>
   <pre class="prettyprint w50 ctr">
 document.body.addEventListener('timeEvent', stateTime);
